--- a/GestioneViaggiAziendali/src/main/resources/application.properties
+++ b/GestioneViaggiAziendali/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+spring.config.import=file:env.properties
 spring.application.name=GestioneViaggiAziendali
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestione_viaggi
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-cloudinary.cloud_name=dtuwqnrfm
-cloudinary.api_key=737999241767736
-cloudinary.api_secret=kTwzdWxNKj_ByMhg6-3tVGsKF3I
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
